--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "components/ArduinoJson"]
 	path = components/ArduinoJson
 	url = https://github.com/bblanchon/ArduinoJson
+[submodule "components/MicroOcppMongoose"]
+	path = components/MicroOcppMongoose
+	url = https://github.com/matth-x/MicroOcppMongoose
+[submodule "components/MicroOcpp"]
+	path = components/MicroOcpp
+	url = https://github.com/matth-x/MicroOcpp
